# bff/api/bff/v1/bff.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.36.11
+// 	protoc-gen-go v1.36.10
 // 	protoc        v7.35.0
 // source: bff/v1/bff.proto
 
@@ -989,7 +989,7 @@ const file_bff_v1_bff_proto_rawDesc = "" +
 	"\x03BFF\x12x\n" +
 	"\x10GetProductDetail\x12\x1f.bff.v1.GetProductDetailRequest\x1a .bff.v1.GetProductDetailResponse\"!\x82\xd3\xe4\x93\x02\x1b\x12\x19/api/v1/bff/products/{id}\x12g\n" +
 	"\fListProducts\x12\x1b.bff.v1.ListProductsRequest\x1a\x1c.bff.v1.ListProductsResponse\"\x1c\x82\xd3\xe4\x93\x02\x16\x12\x14/api/v1/bff/products\x12f\n" +
-	"\vGetShopHome\x12\x1a.bff.v1.GetShopHomeRequest\x1a\x1b.bff.v1.GetShopHomeResponse\"\x1e\x82\xd3\xe4\x93\x02\x18\x12\x16/api/v1/bff/shops/{id}B\x1dZ\x1bproductCenter/api/bff/v1;v1b\x06proto3"
+	"\vGetShopHome\x12\x1a.bff.v1.GetShopHomeRequest\x1a\x1b.bff.v1.GetShopHomeResponse\"\x1e\x82\xd3\xe4\x93\x02\x18\x12\x16/api/v1/bff/shops/{id}B\x13Z\x11bff/api/bff/v1;v1b\x06proto3"
 
 var (
 	file_bff_v1_bff_proto_rawDescOnce sync.Once
